--- a/views/index.ejs
+++ b/views/index.ejs
@@ -96,21 +96,21 @@
                p-3 rounded-lg
                bg-(--muted-bg)">
 
-        <div class="flex-1 overflow-hidden">
-          <a
-            href="<%= originalURL %>"
-            target="_blank"
-            class="block truncate text-sm">
-            <%= originalURL %>
-          </a>
+        <div class="flex-1 min-w-0 overflow-hidden">
+  <a
+    href="<%= originalURL %>"
+    target="_blank"
+    class="block text-sm break-all truncate sm:wrap-break-words">
+    <%= originalURL %>
+  </a>
 
-          <a
-            href="<%= fullShortURL %>"
-            target="_blank"
-            class="block truncate font-semibold text-green-600">
-            <%= fullShortURL %>
-          </a>
-        </div>
+  <a
+    href="<%= fullShortURL %>"
+    target="_blank"
+    class="block font-semibold text-green-600 break-all truncate sm:wrap-break-words">
+    <%= fullShortURL %>
+  </a>
+</div>
 
         <!-- Copy button -->
         <button
