--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,7 +10,7 @@
 
 <body class="min-h-screen flex items-center justify-center
          bg-linear-to-br from-(--bg-start) to-(--bg-end)
-         relative overflow-hidden">
+         relative overflow-x-hidden">
 
   <!-- Background SVG -->
   <svg class="absolute top-0 left-0 w-full h-1/3 -z-10
@@ -29,9 +29,11 @@
 
   <!-- Card -->
   <div class="w-[92%] sm:w-105 lg:w-125
+           max-h-[90vh] flex flex-col
            rounded-2xl shadow-2xl p-6
            bg-(--card-bg)
            text-(--text-color)">
+
 
     <h1 class="text-2xl font-bold text-center mb-6">
       🔗 URL Shortener
@@ -64,11 +66,11 @@
     </form>
 
     <!-- Results -->
-    <div
-  class="mt-6 space-y-3
-         max-h-[45vh] sm:max-h-[50vh]
-         overflow-y-auto pr-2
+    <div class="mt-6 space-y-3
+         flex-1 overflow-y-auto
+         pr-2
          scrollbar-thin scrollbar-thumb-green-400 scrollbar-track-transparent">
+
 
       <% for (const shortURL in links) { const originalURL=links[shortURL]; const
         fullShortURL=`${protocol}://${host}/${shortURL}`; %>
